Lavac 0.9.8   J11 NestHost   J17 Permitted Abstract Enum   <glinit>块和其它的行号问题   default和namedParam导致的错误提示有误 (MethodListMulti还没修复这部分)   Getter/Setter注解   除数为零检测   彻底将lexer移动到LocalContext   实现了     注解注解数组 @T({@T, @T})     fallthrough检测     匿名类对EnclosingThis和方法变量的引用   正在实现     抽象枚举
增加了Jar签名功能，支持RSA/DSA/EC(DSA)证书
删除FMD的run功能，更改目录结构，并修复自动编译的一些bug
合并了数据包的Deflate
删除了Event Identifier
重构ArrayCache无锁化
修改ConfigMaster#readObject参数顺序
修改JPinyin分隔符默认值为""
IOUtil的getResource缓存换成ArrayCache以避免清空SharedBuffer的问题
修复FragmentSource设置长度到0的问题
删除QZArchive一些无用的检查
删除了JVM改来改去导致没法兼容的HostCache
加入了Socks5代理客户端（现已支持HTTP和Raw channel）
HttpRequest#executePooled现在能处理被服务器关闭但未通知客户端的连接了
修复了上一次优化QZFileWriter引入的CRC32计算问题
CardSleep支持20系显卡
修复QZArchiverUI的多线程问题
文件修改监控少开一个线程