@@ -1,5 +1,6 @@
 package roj.compiler.ast.expr;
 
+import roj.WillChange;
 import roj.asm.Opcodes;
 import roj.asm.tree.IClass;
 import roj.asm.tree.MethodNode;
@@ -37,7 +38,7 @@ import java.util.Map;
  * @author Roj233
  * @since 2020/10/13 22:17
  */
-public class Invoke extends ExprNode {
+public final class Invoke extends ExprNode {
 	Object fn; // new anonymous class may change this later
 	List<ExprNode> args;
 	private List<IType> bounds;
@@ -47,50 +48,39 @@ public class Invoke extends ExprNode {
 	private List<IType> desc;
 	private IType genType1;
 
-	public static ExprNode unaryAlt(MethodNode node, ExprNode fn) {
-		assert node.parameters().size() == 0;
-		Invoke invoke = new Invoke(fn, Collections.emptyList());
-		invoke.methodNode = node;
-		invoke.desc = Collections.singletonList(node.returnType());
-		return invoke;
-	}
+	public static ExprNode staticMethod(MethodNode node) {return staticMethod(node, Collections.emptyList());}
+	public static ExprNode staticMethod(MethodNode node, @WillChange ExprNode... args) {return staticMethod(node, Arrays.asList(args));}
+	public static ExprNode staticMethod(MethodNode node, @WillChange List<ExprNode> args) {return create(node, null, args);}
 
-	public static ExprNode binaryAlt(MethodNode override, ExprNode left, ExprNode right) {
-		Invoke invoke;
-		if ((override.modifier()&Opcodes.ACC_STATIC) != 0) invoke = new Invoke(null, List.of(left, right));
-		else invoke = new Invoke(left, Collections.singletonList(right));
+	public static ExprNode virtualMethod(MethodNode node, ExprNode loader) {return virtualMethod(node, loader, Collections.emptyList());}
+	public static ExprNode virtualMethod(MethodNode node, ExprNode loader, @WillChange ExprNode... args) {return virtualMethod(node, loader, Arrays.asList(args));}
+	public static ExprNode virtualMethod(MethodNode node, ExprNode loader, @WillChange List<ExprNode> args) {return create(node, loader, args);}
 
-		invoke.methodNode = override;
-		invoke.desc = Helpers.cast(TypeHelper.parseMethod(override.rawDesc()));
-		return invoke;
-	}
-
-	public static ExprNode staticMethod(MethodNode node, ExprNode... args) {return staticMethod(node, Arrays.asList(args));}
-	public static ExprNode staticMethod(MethodNode node, List<ExprNode> args) {
-		Invoke invoke = new Invoke(null, args);
-		invoke.methodNode = node;
-		invoke.desc = Helpers.cast(TypeHelper.parseMethod(node.rawDesc()));
-		return invoke;
-	}
-	public static ExprNode virtualMethod(MethodNode node, ExprNode loader, ExprNode... args) {
-		Invoke invoke = new Invoke(loader, Arrays.asList(args));
-		invoke.methodNode = node;
-		invoke.desc = Helpers.cast(TypeHelper.parseMethod(node.rawDesc()));
-		return invoke;
-	}
-	public static ExprNode interfaceMethod(MethodNode node, ExprNode loader, ExprNode... args) {
-		Invoke invoke = new Invoke(loader, Arrays.asList(args));
-		invoke.methodNode = node;
-		invoke.desc = Helpers.cast(TypeHelper.parseMethod(node.rawDesc()));
+	public static ExprNode interfaceMethod(MethodNode node, ExprNode loader) {return interfaceMethod(node, loader, Collections.emptyList());}
+	public static ExprNode interfaceMethod(MethodNode node, ExprNode loader, @WillChange ExprNode... args) {return interfaceMethod(node, loader, Arrays.asList(args));}
+	public static ExprNode interfaceMethod(MethodNode node, ExprNode loader, @WillChange List<ExprNode> args) {
+		Invoke invoke = create(node, loader, args);
 		invoke.flag = INTERFACE_CLASS;
 		return invoke;
 	}
-	public static ExprNode constructor(MethodNode node, ExprNode... args) {
-		Invoke invoke = new Invoke(new Type(node.owner), Arrays.asList(args));
-		invoke.methodNode = node;
-		invoke.desc = Helpers.cast(TypeHelper.parseMethod(node.rawDesc()));
+
+	public static ExprNode constructor(MethodNode node) {return constructor(node, Collections.emptyList());}
+	public static ExprNode constructor(MethodNode node, @WillChange ExprNode... args) {return constructor(node, Arrays.asList(args));}
+	public static ExprNode constructor(MethodNode node, @WillChange List<ExprNode> args) {
+		Invoke invoke = create(node, new Type(node.owner), args);
+		if (!node.name().equals("<init>")) throw new IllegalArgumentException(invoke+"调用的不是构造函数");
 		return invoke;
 	}
+
+	private static Invoke create(MethodNode node, Object loader, List<ExprNode> args) {
+		Invoke invoke = new Invoke(loader, args);
+		invoke.methodNode = node;
+		invoke.desc = Helpers.cast(TypeHelper.parseMethod(node.rawDesc()));
+		if (((node.modifier&Opcodes.ACC_STATIC) == 0) == (loader == null)) throw new IllegalArgumentException("静态参数错误:"+invoke);
+		if (args.size() != invoke.desc.size()-1) throw new IllegalArgumentException("参数数量错误:"+invoke);
+		return invoke;
+	}
+
 
 	private static final ToIntMap<Class<?>> TypeId = new ToIntMap<>();
 	static {
@@ -170,10 +160,11 @@ public class Invoke extends ExprNode {
 						}
 					}
 
-					LocalContext.Import mn = ctx.tryImportMethod(method);
+					var mn = ctx.tryImportMethod(method, args);
 					// 静态导入
 					if (mn != null) {
 						type = mn.owner;
+						if (type == null) return mn.prev;
 						method = mn.method;
 						fn = mn.prev;
 						break block;
@@ -211,7 +202,7 @@ public class Invoke extends ExprNode {
 					ctx.report(Kind.ERROR, "symbol.error.derefPrimitiveField", ownMirror);
 					return NaE.RESOLVE_FAILED;
 				} else {
-					SimpleList<ExprNode> tmp = Helpers.cast(ctx.tmpList);
+					SimpleList<ExprNode> tmp = Helpers.cast(ctx.tmpList); tmp.clear();
 					tmp.add(fn2); tmp.addAll(args);
 					args = ctx.ep.copyOf(tmp);
 					fn = null;
@@ -252,7 +243,7 @@ public class Invoke extends ExprNode {
 			}
 		}
 
-		SimpleList<IType> tmp = Helpers.cast(ctx.tmpList); tmp.clear();
+		SimpleList<IType> tmp = Helpers.cast(ctx.tmpList);
 		Map<String, IType> namedType = Collections.emptyMap();
 		int size = args.size()-1;
 		if (size >= 0) {
@@ -265,7 +256,7 @@ public class Invoke extends ExprNode {
 
 			if (last.getClass() != NamedParamList.class) tmp.add(last.type());
 			else namedType = ((NamedParamList) last).getExtraParams();
-		}
+		} else tmp.clear();
 
 		block: {
 			ctx.assertAccessible(type);
